@@ -1,6 +1,7 @@
 2016-07-04 (0.12.7)
 	Updated ARRAY command to handle 2d arrays
 	Fixed issue with INSTR
+	Fixed memory issue with REPLACE
 
 2016-07-03 (0.12.7)
 	Updated welcome screen
